5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1675_2167.log
== SUBMITION (2019-05-02 19:29:01) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da cidade de destino:")
y = input("insira o tipo de percurso:").lower()

if(y = "ida" ):
	if(x == "Belem"):
		print(350.0)	
	elif(x == "Borba"):
		print(80.00)
	elif(x == "Coari"):
		print(106.00)
	elif(x == "Humaitá"):
		print(200.00)
	elif(x == "Manicore")
		print(150.0)
	elif(x == "Maues")
			if(y == "ida-e-volta"):
				if(x == "Belem")
					print(650.0)
				elif(x == "Borba"):
					print(152.0)
				elif(x == "Coari"):
					print(390.00)
				elif(x == "Humaita"):
					print(280.0)
				elif(x == "Maues"):
					print(190.0)
	else:
		print("Destino inexistente")
-- EXECUTION TIME:
0.208548
-- ERROR:
  File "/home/codebench/codes/1675/2167/main.py", line 6
    if(y = "ida" ):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:29:03) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da cidade de destino:")
y = input("insira o tipo de percurso:").lower()

if(y = "ida" ):
	if(x == "Belem"):
		print(350.0)	
	elif(x == "Borba"):
		print(80.00)
	elif(x == "Coari"):
		print(106.00)
	elif(x == "Humaitá"):
		print(200.00)
	elif(x == "Manicore")
		print(150.0)
	elif(x == "Maues")
			if(y == "ida-e-volta"):
				if(x == "Belem")
					print(650.0)
				elif(x == "Borba"):
					print(152.0)
				elif(x == "Coari"):
					print(390.00)
				elif(x == "Humaita"):
					print(280.0)
				elif(x == "Maues"):
					print(190.0)
	else:
		print("Destino inexistente")
-- EXECUTION TIME:
0.154447
-- ERROR:
  File "/home/codebench/codes/1675/2167/main.py", line 6
    if(y = "ida" ):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:29:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da cidade de destino:")
y = input("insira o tipo de percurso:").lower()

if(y = "ida" ):
	if(x == "Belem"):
		print(350.0)	
	elif(x == "Borba"):
		print(80.00)
	elif(x == "Coari"):
		print(106.00)
	elif(x == "Humaitá"):
		print(200.00)
	elif(x == "Manicore")
		print(150.0)
	elif(x == "Maues")
			if(y == "ida-e-volta"):
				if(x == "Belem")
					print(650.0)
				elif(x == "Borba"):
					print(152.0)
				elif(x == "Coari"):
					print(390.00)
				elif(x == "Humaita"):
					print(280.0)
				elif(x == "Maues"):
					print(190.0)
	else:
		print("Destino inexistente")
-- ERROR:
File "XXXX", line 6
    if(y = "ida" ):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:29:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da cidade de destino:")
y = input("insira o tipo de percurso:").lower()

if(y == "ida" ):
	if(x == "Belem"):
		print(350.0)	
	elif(x == "Borba"):
		print(80.00)
	elif(x == "Coari"):
		print(106.00)
	elif(x == "Humaitá"):
		print(200.00)
	elif(x == "Manicore")
		print(150.0)
	elif(x == "Maues")
			if(y == "ida-e-volta"):
				if(x == "Belem")
					print(650.0)
				elif(x == "Borba"):
					print(152.0)
				elif(x == "Coari"):
					print(390.00)
				elif(x == "Humaita"):
					print(280.0)
				elif(x == "Maues"):
					print(190.0)
	else:
		print("Destino inexistente")
-- ERROR:
File "XXXX", line 15
    elif(x == "Manicore")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:29:28) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da cidade de destino:")
y = input("insira o tipo de percurso:").lower()

if(y == "ida" ):
	if(x == "Belem"):
		print(350.0)	
	elif(x == "Borba"):
		print(80.00)
	elif(x == "Coari"):
		print(106.00)
	elif(x == "Humaitá"):
		print(200.00)
	elif(x == "Manicore"):
		print(150.0)
	elif(x == "Maues"):
			if(y == "ida-e-volta"):
				if(x == "Belem"):
					print(650.0)
				elif(x == "Borba"):
					print(152.0)
				elif(x == "Coari"):
					print(390.00)
				elif(x == "Humaita"):
					print(280.0)
				elif(x == "Maues"):
					print(190.0)
	else:
		print("Destino inexistente")
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:29:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da cidade de destino:")
y = input("insira o tipo de percurso:").lower()

if(y == "ida" ):
	if(x == "Belem"):
		print(350.0)	
	elif(x == "Borba"):
		print(80.00)
	elif(x == "Coari"):
		print(106.00)
	elif(x == "Humaitá"):
		print(200.00)
	elif(x == "Manicore"):
		print(150.0)
	elif(x == "Maues"):
			if(y == "ida-e-volta"):
				if(x == "Belem"):
					print(650.0)
				elif(x == "Borba"):
					print(152.0)
				elif(x == "Coari"):
					print(390.00)
				elif(x == "Humaita"):
					print(280.0)
				elif(x == "Maues"):
					print(190.0)
	else:
		print("Destino inexistente")
-- EXECUTION TIME:
0.215414
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
Destino inexistente
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:29:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da cidade de destino:")
y = input("insira o tipo de percurso:").lower()

if(y == "ida" ):
	if(x == "Belem"):
		print(350.0)	
	elif(x == "Borba"):
		print(80.00)
	elif(x == "Coari"):
		print(106.00)
	elif(x == "Humaitá"):
		print(200.00)
	elif(x == "Manicore"):
		print(150.0)
	elif(x == "Maues"):
			if(y == "ida-e-volta"):
				if(x == "Belem"):
					print(650.0)
				elif(x == "Borba"):
					print(152.0)
				elif(x == "Coari"):
					print(390.00)
				elif(x == "Humaita"):
					print(280.0)
				elif(x == "Maues"):
					print(190.0)
	else:
		print("Destino inexistente")
-- EXECUTION TIME:
0.163559
-- TEST CASE 1:
---- input:
Manaus
ida
---- correct output:
Destino inexistente
---- user output:
Destino inexistente
-- TEST CASE 2:
---- input:
Humaita
ida
---- correct output:
200.0
---- user output:
Destino inexistente
-- TEST CASE 3:
---- input:
Maues
ida-e-volta
---- correct output:
190.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:29:35) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da cidade de destino:")
y = input("insira o tipo de percurso:").lower()

if(y == "ida" ):
	if(x == "Belem"):
		print(350.0)	
	elif(x == "Borba"):
		print(80.00)
	elif(x == "Coari"):
		print(106.00)
	elif(x == "Humaitá"):
		print(200.00)
	elif(x == "Manicore"):
		print(150.0)
	elif(x == "Maues"):
			if(y == "ida-e-volta"):
				if(x == "Belem"):
					print(650.0)
				elif(x == "Borba"):
					print(152.0)
				elif(x == "Coari"):
					print(390.00)
				elif(x == "Humaita"):
					print(280.0)
				elif(x == "Maues"):
					print(190.0)
	else:
		print("Destino inexistente")
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:30:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da cidade de destino:")
y = input("insira o tipo de percurso:").lower()

if(y == "ida" ):
	if(x == "Belem"):
		print(350.0)	
	elif(x == "Borba"):
		print(80.00)
	elif(x == "Coari"):
		print(106.00)
	elif(x == "Humaitá"):
		print(200.00)
	elif(x == "Manicore"):
		print(150.0)
	elif(x == "Maues"):
			if(y == "ida-e-volta"):
				if(x == "Belem"):
					print(650.0)
				elif(x == "Borba"):
					print(152.0)
				elif(x == "Coari"):
					print(390.00)
				elif(x == "Humaita"):
					print(280.0)
				elif(x == "Maues"):
					print(190.0)
	else:
		print("Destino inexistente")
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:30:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da cidade de destino:")
y = input("insira o tipo de percurso:").lower()

if(y == "ida" ):
	if(x == "Belem"):
		print(350.0)	
	elif(x == "Borba"):
		print(80.00)
	elif(x == "Coari"):
		print(106.00)
	elif(x == "Humaitá"):
		print(200.00)
	elif(x == "Manicore"):
		print(150.0)
	elif(x == "Maues"):
			if(y == "ida-e-volta"):
				if(x == "Belem"):
					print(650.0)
				elif(x == "Borba"):
					print(152.0)
				elif(x == "Coari"):
					print(390.00)
				elif(x == "Humaita"):
					print(280.0)
				elif(x == "Maues"):
					print(190.0)
	else:
		print("Destino inexistente")
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:31:52) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da cidade de destino:")
y = input("insira o tipo de percurso:").lower()

if(y == "ida" ):
	if(x == "Belem"):
		print(350.0)	
	elif(x == "Borba"):
		print(80.00)
	elif(x == "Coari"):
		print(106.00)
	elif(x == "Humaitá"):
		print(200.00)
	elif(x == "Manicore"):
		print(150.0)
	elif(x == "Maues"):
		if(y == "ida-e-volta"):
			if(x == "Belem"):
				print(650.0)
			elif(x == "Borba"):
				print(152.0)
			elif(x == "Coari"):
				print(390.00)
			elif(x == "Humaita"):
				print(280.0)
			elif(x == "Maues"):
				print(190.0)
	else:
		print("Destino inexistente")
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:32:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da cidade de destino:")
y = input("insira o tipo de percurso:").lower()

if(y == "ida" ):
	if(x == "Belem"):
		print(350.0)	
	elif(x == "Borba"):
		print(80.00)
	elif(x == "Coari"):
		print(106.00)
	elif(x == "Humaitá"):
		print(200.00)
	elif(x == "Manicore"):
		print(150.0)
	elif(x == "Maues"):
		if(y == "ida-e-volta"):
			if(x == "Belem"):
				print(650.0)
			elif(x == "Borba"):
				print(152.0)
			elif(x == "Coari"):
				print(390.00)
			elif(x == "Humaita"):
				print(280.0)
			elif(x == "Maues"):
				print(190.0)
	else:
		print("Destino inexistente")
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:32:45) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da cidade de destino:")
y = input("insira o tipo de percurso:").lower()

if(y == "ida" ):
	if(x == "Belem"):
		print(350.0)	
	elif(x == "Borba"):
		print(80.00)
	elif(x == "Coari"):
		print(106.00)
	elif(x == "Humaitá"):
		print(200.00)
	elif(x == "Manicore"):
		print(150.0)
	elif(x == "Maues"):
if(y == "ida-e-volta"):
	if(x == "Belem"):
		print(650.0)
	elif(x == "Borba"):
		print(152.0)
	elif(x == "Coari"):
		print(390.00)
	elif(x == "Humaita"):
		print(280.0)
	elif(x == "Maues"):
				print(190.0)
	else:
		print("Destino inexistente")
-- ERROR:
File "XXXX", line 18
    if(y == "ida-e-volta"):
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:33:00) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da cidade de destino:")
y = input("insira o tipo de percurso:").lower()

if(y == "ida" ):
	if(x == "Belem"):
		print(350.0)	
	elif(x == "Borba"):
		print(80.00)
	elif(x == "Coari"):
		print(106.00)
	elif(x == "Humaitá"):
		print(200.00)
	elif(x == "Manicore"):
		print(150.0)
	elif(x == "Maues"):
if(y == "ida-e-volta"):
	if(x == "Belem"):
		print(650.0)
	elif(x == "Borba"):
		print(152.0)
	elif(x == "Coari"):
		print(390.00)
	elif(x == "Humaita"):
		print(280.0)
	elif(x == "Maues"):
				print(190.0)
	else:
		print("Destino inexistente")
-- ERROR:
File "XXXX", line 18
    if(y == "ida-e-volta"):
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:33:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da cidade de destino:")
y = input("insira o tipo de percurso:").lower()

if(y == "ida" ):
	if(x == "Belem"):
		print(350.0)	
	elif(x == "Borba"):
		print(80.00)
	elif(x == "Coari"):
		print(106.00)
	elif(x == "Humaitá"):
		print(200.00)
	elif(x == "Manicore"):
		print(150.0)
	elif(x == "Maues"):
	if(y == "ida-e-volta"):
	if(x == "Belem"):
		print(650.0)
	elif(x == "Borba"):
		print(152.0)
	elif(x == "Coari"):
		print(390.00)
	elif(x == "Humaita"):
		print(280.0)
	elif(x == "Maues"):
				print(190.0)
	else:
		print("Destino inexistente")
-- ERROR:
File "XXXX", line 18
    if(y == "ida-e-volta"):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:33:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da cidade de destino:")
y = input("insira o tipo de percurso:").lower()

if(y == "ida" ):
	if(x == "Belem"):
		print(350.0)	
	elif(x == "Borba"):
		print(80.00)
	elif(x == "Coari"):
		print(106.00)
	elif(x == "Humaitá"):
		print(200.00)
	elif(x == "Manicore"):
		print(150.0)
	elif(x == "Maues"):
		if(y == "ida-e-volta"):
	if(x == "Belem"):
		print(650.0)
	elif(x == "Borba"):
		print(152.0)
	elif(x == "Coari"):
		print(390.00)
	elif(x == "Humaita"):
		print(280.0)
	elif(x == "Maues"):
				print(190.0)
	else:
		print("Destino inexistente")
-- ERROR:
File "XXXX", line 19
    if(x == "Belem"):
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:33:37) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da cidade de destino:")
y = input("insira o tipo de percurso:").lower()

if(y == "ida" ):
	if(x == "Belem"):
		print(350.0)	
	elif(x == "Borba"):
		print(80.00)
	elif(x == "Coari"):
		print(106.00)
	elif(x == "Humaitá"):
		print(200.00)
	elif(x == "Manicore"):
		print(150.0)
	elif(x == "Maues"):
		if(y == "ida-e-volta"):
			if(x == "Belem"):
				print(650.0)
			elif(x == "Borba"):
				print(152.0)
			elif(x == "Coari"):
				print(390.00)
			elif(x == "Humaita"):
				print(280.0)
			elif(x == "Maues"):
				print(190.0)
	else:
		print("Destino inexistente")
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:33:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("nome da cidade de destino:")
y = input("insira o tipo de percurso:").lower()

if(y == "ida" ):
	if(x == "Belem"):
		print(350.0)	
	elif(x == "Borba"):
		print(80.00)
	elif(x == "Coari"):
		print(106.00)
	elif(x == "Humaitá"):
		print(200.00)
	elif(x == "Manicore"):
		print(150.0)
	elif(x == "Maues"):
		if(y == "ida-e-volta"):
			if(x == "Belem"):
				print(650.0)
			elif(x == "Borba"):
				print(152.0)
			elif(x == "Coari"):
				print(390.00)
			elif(x == "Humaita"):
				print(280.0)
			elif(x == "Maues"):
				print(190.0)
	else:
		print("Destino inexistente")
-- OUTPUT:
Destino inexistente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
